--- a/src/app/components/forgot-password/forgot-password.component.html
+++ b/src/app/components/forgot-password/forgot-password.component.html
@@ -61,7 +61,7 @@
             [disabled]="loading"
           >
             <span *ngIf="loading" class="spinner"></span>
-            <span *ngIf="!loading">📤 Enviar enlace de recuperación</span>
+            <span *ngIf="!loading">Enviar enlace de recuperación</span>
             <span *ngIf="loading">Enviando...</span>
           </button>
         </form>
